force-app/main/default/objects/sugati__Questinnaire__c/sugati__Questinnaire__c.object-meta.xml
<CustomObject>
    <description>Client and HS Questionnaire</description>
    <label>Questionnaire</label>
    <nameField>
        <displayFormat>Q-{0000000000}</displayFormat>
        <label>Questinnaire ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>