force-app/main/default/objects/sugati__Questinnaire__c/fields/sugati__Defect_on_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>sugati__Defect_on_Questionnaire__c</fullName>
    <formula>IF(sugati__StatusNA__c = &apos;Red&apos;,&quot;YES&quot;,&quot;NO&quot;)</formula>
    <label>Defect on Questionnaire?</label>
    <type>Text</type>
</CustomField>