force-app/main/default/objects/sugati__Questinnaire__c/fields/sugati__Q_Audit_By__c.field-meta.xml
<CustomField>
    <fullName>sugati__Q_Audit_By__c</fullName>
    <label>Audit By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>