force-app/main/default/objects/sugati__Questinnaire__c/fields/sugati__Q_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__Q_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Questionnaires</relationshipLabel>
    <relationshipName>Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>