force-app/main/default/objects/sugati__Questinnaire__c/fields/sugati__Q_Category_Checker__c.field-meta.xml
<CustomField>
    <fullName>sugati__Q_Category_Checker__c</fullName>
    <label>Category Checker</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>