force-app/main/default/objects/sugati__Questinnaire__c/fields/sugati__Q_Client_Group__c.field-meta.xml
<CustomField>
    <fullName>sugati__Q_Client_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Group</label>
    <referenceTo>sugati__Client_Group__c</referenceTo>
    <relationshipLabel>Questionnaires</relationshipLabel>
    <relationshipName>Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>