force-app/main/default/objects/sugati__Questinnaire__c/fields/sugati__Q_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__Q_Completed_Date__c</fullName>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>