force-app/main/default/objects/sugati__Questinnaire__c/fields/sugati__Q_Date_of_visit__c.field-meta.xml
<CustomField>
    <fullName>sugati__Q_Date_of_visit__c</fullName>
    <description>This is for HS Questionnaire</description>
    <label>Date of visit</label>
    <type>Date</type>
</CustomField>