force-app/main/default/objects/sugati__Questinnaire__c/fields/sugati__QuestionnaireName__c.field-meta.xml
<CustomField>
    <fullName>sugati__QuestionnaireName__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+Id, Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Questionnaire Name</label>
    <type>Text</type>
</CustomField>