force-app/main/default/objects/sugati__Questinnaire__c/fields/sugati__Status__c.field-meta.xml
<CustomField>
    <fullName>sugati__Status__c</fullName>
    <formula>IF(sugati__StatusNA__c  = &apos;Red&apos;, IMAGE(&quot;/resource/RedColor&quot;, &quot;Red&quot;), IMAGE(&quot;/resource/GreenColor&quot;, &quot;Green&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>