force-app/main/default/objects/sugati__Questinnaire__c/fields/sugati__StatusNA__c.field-meta.xml
<CustomField>
    <fullName>sugati__StatusNA__c</fullName>
    <label>StatusNA</label>
    <length>10</length>
    <type>Text</type>
</CustomField>