force-app/main/default/objects/sugati__Questinnaire__c/recordTypes/sugati__Client.recordType-meta.xml
<RecordType>
    <fullName>sugati__Client</fullName>
    <active>true</active>
    <description>Client Questionnaire</description>
    <label>Client</label>
</RecordType>