force-app/main/default/objects/sugati__Questinnaire__c/recordTypes/sugati__H_S.recordType-meta.xml
<RecordType>
    <fullName>sugati__H_S</fullName>
    <active>true</active>
    <description>Health and Safety</description>
    <label>H&amp;S</label>
</RecordType>